// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite_config > basic: reads fmt field from vite.config.ts 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/basic
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`vite_config > missing fmt field in vite.config.ts falls back to default config 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/missing_fmt_field
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`vite_config > priority: oxfmt.config.ts takes precedence over vite.config.ts 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/priority
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;
